--- a/src/components/Layout/Footer/footer.scss
+++ b/src/components/Layout/Footer/footer.scss
@@ -1,14 +1,17 @@
-// Footer
 #footer {
 	box-shadow: var(--primary-shadow);
 	padding-block: var(--primary-spacing);
 	background-color: var(--primary-color);
 	text-align: center;
-	// font-weight: 900;
 
 	& a {
 		color: var(--quinary-color);
-		font-size: 1.2rem;
-		line-height: 2;
+		font-size: var(--primary-font-size);
+		line-height: var(--primary-line-height);
+
+		&:hover,
+		&:focus {
+			text-decoration: underline;
+		}
 	}
 }
