--- a/src/components/Layout/Main/main.scss
+++ b/src/components/Layout/Main/main.scss
@@ -1,4 +1,4 @@
 #directory {
-	padding-block: 4%;
-	padding-inline: 5%;
+	padding-block: var(--tertiary-spacing);
+	padding-inline: var(--quaternary-spacing);
 }
