--- a/src/components/Elements/Message/Message.scss
+++ b/src/components/Elements/Message/Message.scss
@@ -1,9 +1,5 @@
 .info-message {
-	margin-bottom: 1rem;
-	color: red;
-}
-
-.success-message {
-	margin-block-start: 1rem;
-	color: #277a7f;
+	color: var(--quinary-color);
+	font-size: var(--secondary-font-size);
+	text-align: center;
 }
