--- a/src/features/BusinessLayout/BusinessInfo/business-info.scss
+++ b/src/features/BusinessLayout/BusinessInfo/business-info.scss
@@ -3,4 +3,10 @@
 	padding-inline: var(--quaternary-spacing);
 	padding-block: var(--secondary-spacing) 0;
 	color: var(--tertiary-color);
+
+	@media screen and(max-width: 800px) {
+		flex-flow: column nowrap;
+		padding-inline: initial;
+		text-align: center;
+	}
 }
